# rust-api-warp

./: .gitignore  Cargo.toml  DESIGN.md  README.md  makefile
src/: errors.rs  main.rs
src/routes/: mod.rs
src/utils/: mod.rs
